# home_services

./: .gitignore  create_dotenv.py
.github/workflows/: deploy.yml
backend/: app.py  config.py  pyproject.toml  requirements.txt
backend/events/: routes.py
backend/routers/: dashboard.py
backend/services/: subway.py  weather.py  xkcd.py
backend/subway/: routes.py  services.py
backend/templates/: preview.html  trmnl.html
backend/weather/: routes.py
