[project]
name = "backend"
version = "0.1.0"
description = "TRMNL home dashboard API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "jinja2>=3.1.6",
    "gtfs-realtime-bindings>=1.0.0",
    "protobuf>=5.29.0",
    "gunicorn>=23.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
